Refatora e atualiza java, classes de controller, DAO, DTO, modelo e testes
- Atualização do java 8 para 21
- Refatoração e melhorias em controllers, DAOs, DTOs e modelos
- Ajustes de segurança em WebSecurityConfig
- Atualização de testes e utilitários JPA
- Atualização de dependências no pom.xml para versões mais recentes
    - spring-boot-starter-parent: 2.5.0 → 2.7.15
    - spring-boot-starter-data-jpa: 2.5.0 → 2.7.15
    - spring-boot-starter-thymeleaf: 2.5.0 → 2.7.15
    - spring-boot-starter-web: 2.5.0 → 2.7.15
    - spring-boot-starter-security: 2.5.0 → 2.7.15
    - h2: 1.4.200 → 2.2.224
    - junit-jupiter: 5.7.1 → 5.9.3
 Changes to be committed:
	modified:   pom.xml
    modified:   src/main/java/br/com/alura/leilao/controller/LanceController.java
	modified:   src/main/java/br/com/alura/leilao/controller/LeilaoController.java
	modified:   src/main/java/br/com/alura/leilao/dao/LanceDao.java
	modified:   src/main/java/br/com/alura/leilao/dao/LeilaoDao.java
	modified:   src/main/java/br/com/alura/leilao/dao/UsuarioDao.java
	modified:   src/main/java/br/com/alura/leilao/dto/NovoLanceDto.java
	modified:   src/main/java/br/com/alura/leilao/dto/NovoLeilaoDto.java
	modified:   src/main/java/br/com/alura/leilao/model/Lance.java
	modified:   src/main/java/br/com/alura/leilao/model/Leilao.java
	modified:   src/main/java/br/com/alura/leilao/model/Usuario.java
	modified:   src/main/java/br/com/alura/leilao/security/WebSecurityConfig.java
	modified:   src/test/java/br/com/alura/leilao/dao/LeilaoDaoTest.java
	modified:   src/test/java/br/com/alura/leilao/dao/UsuarioDaoTest.java
	modified:   src/test/java/br/com/alura/leilao/util/JPAUtil.java